# fastsketch

./: CMakeLists.txt  LICENSE  README.md  main.c  run.sh
include/: cui.hpp  cursor.h  drawops.h  file.h  rgba.h  selection.h  shapes.h  tool.h  undo.h
src/: cui.cpp  cursor.c  drawops.c  file.c  rgba.c  selection.c  shapes.c  stb_impl.c  undo.c
